Fixed bug where menu was behind images on mobile

--- a/resources/css/mobile.css
+++ b/resources/css/mobile.css
@@ -7,6 +7,7 @@
     width: 300px;
     right: 0;
     margin: 0;
+    z-index: 10;
   }
 
   header h1 {
